[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'property-mapper'
version = '2.0.0'
requires-python = '>=3.10'
description = 'HPT Property Mapper'
authors = [
    { name = 'Artem Vlasov', email = 'root@proscript.ru' },
]
maintainers = [
    { name = 'Artem Vlasov', email = 'root@proscript.ru' },
]
readme = 'README.md'
dependencies = [
    'pytz',
]

[project.urls]
Repository = 'https://github.com/Yuego/property-mapper/'

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.format]
# Использовать одинарные кавычки вместо двойных
quote-style = "single"  # Доступные варианты: "single", "double"

# Также можно настроить кавычки для docstrings
docstring-code-format = true